argocd/raw-manifests/local-staging/network-debug-app/local-3/virtual-service-3.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: network-debug-app-vs-3
  namespace: istio-system
spec:
  hosts:
    - "nda3.staging.local"
  http:
    - route:
        - destination:
            host: network-debug-app-staging-local-3-debug.networking-test.svc.cluster.local  # Check if this service name matches your Argo CD service
            port:
              number: 80
